<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Advanced settings</string>

    <string name="category_performance_title">Performance</string>

    <string name="gpu_overclock_title">Maximum GPU Clock Speed</string>
    <string name="iva_overclock_title">Maximum IVA Clock Speed</string>
    <string name="max_sleep_frequency_title">Maximum Screen-Off Frequency</string>

</resources>
